# tkmessenger

./: .gitattributes  .gitignore  CONTRIBUTING.md  DEPLOY.md  README.md  TRAE_AUDIT_REPORT.md  analysis_options.yaml  bug-report-extracted.txt  call-manager.js  capacitor.config.json  check.cjs  docker-compose.yml  download.html  electron.mjs  index.html  main.js  manifest.json  orbit-workers.js  orbits fix prompt.txt  package-lock.json  package.json  perf-observability.js  preload.cjs  pubspec.yaml  radar.js  splash.html  style.css  tailwind.config.js  themeManager.js  virtual-scroll.js  vite.config.js  vitest.config.js  vitest.setup.js  worker-crypto.js  worker-db.js  worker-file.js
.github/workflows/: android-build.yml  build-ios.yml  build-native.yml  build.yml  deploy.yml  electron-release.yml  main.yml  pages-deploy.yml  pages.yml  release.yml
android/app/: build.gradle
client/: index.html  package.json  tailwind.config.js  vite.config.ts
client/src/: App.tsx  index.css
docs/: research-day4-flutter-state.md  research-day4-js-voice-file.md
github_push/: .gitignore  README.md  orbit-workers.js  style.css  worker-crypto.js
lib/: app_shell.dart  main.dart
lib/core/: app_version.dart  auth_validation.dart  avatar_resize.dart  crypto_local.dart  deferred_loader.dart  feature_flags.dart  notifications.dart  prekey_store.dart  update_applier.dart  update_applier_io.dart  update_applier_web.dart  update_checker.dart  x3dh_session.dart
lib/messaging/: message_mapper.dart
lib/pages/: chat_view_page.dart  chats_page.dart  drop_page.dart  games_page.dart  settings_page.dart  themes_page.dart
lib/peer/: add_contact_link.dart  helpers.dart  multi_tab_lock.dart  (+5 more)
orbits_native/: README.md  pubspec.yaml
public/: 404.html  manifest.json  service-worker.js  sw.js
scripts/: generate-crypto-fixtures.mjs  generate_report.mjs  ratchet-smoke.mjs  verify_features.js
server/: .env.example  package.json  tsconfig.json
shared/: index.ts  package.json
src/: App.jsx  main.js  main.jsx
src-rust/: Cargo.toml
src-rust/src/: crypto.rs  drop_engine.rs  lib.rs  ratchet.rs  virtual_scroll.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: errors.rs  lib.rs  main.rs
src-tauri/src/bridge/: commands.rs  events.rs  mod.rs
src-tauri/src/crypto/: mod.rs  ratchet.rs
src-tauri/src/db/: mod.rs
src-tauri/src/net/: discovery.rs  mod.rs  protocol.rs
src-tauri/src/services/: drop_service.rs  mod.rs  ratchet_service.rs
test/: widget_test.dart
tool/: build_web_release.ps1  run_profile.ps1  serve_web.dart
web/: 404.html  drift_worker.dart  drift_worker.js.deps  drift_worker.js.map  index.html  manifest.json
(+360 files in other folders)
