[package]
name = "orbits-crypto"
version = "0.1.0"
edition = "2021"
description = "Криптографическое ядро Orbits P2P — генерация ключей, шифрование/дешифрование (заготовка под Double Ratchet)"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
aes-gcm = "0.10"
hkdf = "0.12"
sha2 = "0.10"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"

[profile.release]
opt-level = "s"
lto = true
strip = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
