[package]
name = "orbits-titan"
version = "0.1.0"
edition = "2021"
description = "Orbits P2P Messenger — Native Tauri Backend"

[dependencies]
# ── Tauri ────────────────────────────────────────────────────
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# ── Async runtime ────────────────────────────────────────────
tokio = { version = "1", features = ["full"] }

# ── Networking (libp2p) ──────────────────────────────────────
libp2p = { version = "0.54", features = [
    "tokio",
    "noise",
    "yamux",
    "quic",
    "tcp",
    "dns",
    "identify",
    "kad",
    "mdns",
    "relay",
    "dcutr",
    "ping",
    "request-response",
    "macros",
    "serde",
] }

# ── Cryptography (migrated from WASM crate) ──────────────────
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
aes-gcm = "0.10"
hkdf = "0.12"
sha2 = "0.10"
rand = "0.8"
hmac = "0.12"
pbkdf2 = "0.12"
scrypt = "0.11"
base64 = "0.22"
getrandom = "0.2"

# ── Storage ──────────────────────────────────────────────────
rusqlite = { version = "0.32", features = ["bundled"] }

# ── Error handling ───────────────────────────────────────────
thiserror = "2"
anyhow = "1"

# ── Logging ──────────────────────────────────────────────────
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# ── Utilities ────────────────────────────────────────────────
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
futures = "0.3"
async-trait = "0.1"
hostname = "0.4"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1
